--- a/client/src/pages/DefaultLayout/Header/index.css
+++ b/client/src/pages/DefaultLayout/Header/index.css
@@ -1,44 +1,50 @@
-@import '../../../styles/index.css';
+@import "../../../styles/index.css";
+
 .Header h3 {
-    font-size: 18px;
+  font-size: 18px;
 }
 
 .navbar {
-    position: relative;
-    z-index: 1;
-    left: 0;
-    display: flex;
-    align-items: center;
-    background-color: var(--yellow);
+  position: relative;
+  z-index: 1;
+  left: 0;
+  display: flex;
+  align-items: center;
+  background-color: var(--yellow);
 }
 
 .navbar .empty {
-    flex-grow: 1;
+  flex-grow: 1;
 }
 
 .navbar li h1 {
-    font-size: 32px;
+  font-size: 32px;
 }
 
 .navbar li:first-of-type {
-    padding-left: 6rem;
-    display: flex;
-    align-items: center;
+  padding-left: 6rem;
+  display: flex;
+  align-items: center;
 }
 
 .navbar li:last-of-type {
-    padding-right: 6rem;
+  padding-right: 6rem;
 }
 
 .navbar li .nav-item {
-    color: var(--black);
-    text-decoration: transparent;
+  color: var(--black);
+  text-decoration: transparent;
 }
 
 .navbar li .nav-item:hover {
-    border-bottom: 2px solid var(--black);
+  border-bottom: 2px solid var(--black);
 }
 
 .navbar li {
-    padding: 1em;
+  padding: 1em;
+}
+
+.navbar img {
+  height: 2rem;
+  width: 2rem;
 }
