--- a/client/src/pages/FriendsPage/FriendsContent/Friend/index.css
+++ b/client/src/pages/FriendsPage/FriendsContent/Friend/index.css
@@ -6,12 +6,13 @@
     justify-content: center;
     align-items: center;
     background: var(--almost-white);
-    width: 75rem;
+    width: 100%;
     height: 10rem;
     box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.5);
     border-radius: 2rem;
     padding: 1rem 2rem;
     margin-bottom: 2rem;
+    overflow-x: auto;
 }
 
 .Friend img {
