--- a/client/src/pages/FriendsPage/FriendsContent/Friend/index.css
+++ b/client/src/pages/FriendsPage/FriendsContent/Friend/index.css
@@ -11,7 +11,7 @@
     box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.5);
     border-radius: 2rem;
     padding: 1rem 2rem;
-    margin-bottom: 2rem;
+    margin-top: 2.75rem;
     overflow-x: auto;
 }
 
