--- a/client/src/pages/InHarmonyPage/Leaderboard/ComparedUser/index.css
+++ b/client/src/pages/InHarmonyPage/Leaderboard/ComparedUser/index.css
@@ -10,7 +10,7 @@
   box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.5);
   border-radius: 2rem;
   padding: 1rem 2rem;
-  margin-bottom: 2rem;
+  margin-top: 2.75rem;
 }
 
 .ComparedUser img {
