--- a/client/src/pages/InHarmonyPage/Leaderboard/index.css
+++ b/client/src/pages/InHarmonyPage/Leaderboard/index.css
@@ -1,12 +1,12 @@
 @import "../../../styles/index.css";
 
 .Leaderboard {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    margin: 4rem 6rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  margin: 4rem 6rem;
 }
 
 .Leaderboard .harmonyHeader {
@@ -70,8 +70,9 @@
   max-width: 100%;
   min-width: 80%;
   padding-top: 1rem;
+  margin-right: 4rem;
 }
 
-.Leaderboard .ComparedUsers ul{
-    width: 100%;
+.Leaderboard .ComparedUsers ul {
+  width: 100%;
 }
