--- a/client/src/pages/ChatroomPage/index.css
+++ b/client/src/pages/ChatroomPage/index.css
@@ -37,15 +37,15 @@
     flex-direction: column;
     background-color: var(--white);
 }
-  
+
 .Chatroom main::-webkit-scrollbar {
     width: 0.25rem;
 }
-  
+
 .Chatroom main::-webkit-scrollbar-track {
     background: var(--grey);
 }
-  
+
 .Chatroom main::-webkit-scrollbar-thumb {
     background: var(--blue);
 }
@@ -76,7 +76,7 @@
     border-radius: 3rem;
     padding: 1rem 2rem;
 }
-  
+
 .Chatroom form button {
     justify-self: flex-end;
     background: none;
@@ -88,16 +88,17 @@
     align-items: center;
     justify-content: center;
 }
-  
+
 .Chatroom form button:disabled {
     cursor: not-allowed;
-} 
-  
-.Chatroom ul, li {
+}
+
+.Chatroom ul,
+li {
     text-align: left;
     list-style: none;
 }
-  
+
 .Chatroom .message p {
     max-width: 50%;
     margin-bottom: 0.75rem;
@@ -109,16 +110,16 @@
     text-align: left;
     font-weight: 600;
 }
-  
+
 .Chatroom .message {
     display: flex;
     align-items: center;
 }
-  
+
 .Chatroom .sent {
     flex-direction: row-reverse;
 }
-  
+
 .Chatroom .sent p {
     color: var(--white);
     background: var(--red);
