--- a/client/src/pages/ChatroomPage/MessagingList/index.css
+++ b/client/src/pages/ChatroomPage/MessagingList/index.css
@@ -1,5 +1,21 @@
 @import '../../../styles/index.css';
 
 .MessagingList {
-    width: 40%;
+    width: 100%;
+    height: 100%;
+    overflow-y: scroll;
+    display: flex;
+    flex-direction: column;
+}
+
+.MessagingList::-webkit-scrollbar {
+    width: 0.25rem;
+}
+
+.MessagingList::-webkit-scrollbar-track {
+    background: var(--grey);
+}
+
+.MessagingList::-webkit-scrollbar-thumb {
+    background: var(--blue);
 }
