--- a/client/src/pages/ChatroomPage/index.css
+++ b/client/src/pages/ChatroomPage/index.css
@@ -31,11 +31,13 @@
 
 .Chatroom main {
     width: 100%;
-    height: 75%;
+    height: 78%;
     overflow-y: scroll;
     display: flex;
     flex-direction: column;
     background-color: var(--white);
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 
 .Chatroom main::-webkit-scrollbar {
@@ -52,19 +54,20 @@
 
 .Chatroom form {
     width: 100%;
-    height: 15%;
+    height: calc(12% - 2rem);
     font-size: 1.5rem;
-    background: var(--almost-white);
+    background: var(--white);
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 1rem;
     box-sizing: border-box;
+    box-shadow: var(--shadow);
 }
 
 .Chatroom input {
     line-height: 1.5;
-    height: 2rem;
+    height: 1.5rem;
     width: 100%;
     font-size: 1.5rem;
     font-weight: 600;
@@ -75,6 +78,7 @@
     box-shadow: var(--shadow);
     border-radius: 3rem;
     padding: 1rem 2rem;
+    background-color: var(--almost-white);
 }
 
 .Chatroom form button {
@@ -129,12 +133,12 @@ li {
 .Chatroom .received p {
     background: var(--almost-white);
     color: var(--black);
+
 }
 
-
-.Chatroom img {
-    width: 40px;
-    height: 40px;
+.Chatroom .SBImg {
+    width: 2.5rem;
+    height: 3rem;
     border-radius: 50%;
     margin: 2px 5px;
 }
