--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -8,6 +8,7 @@
     --teal: #4bc6b9;
     --black: #191919;
     --grey: #646165;
+    --light-grey: #e5e5e5;
     --almost-white: #fafaff;
     --white: #fcfcfc;
     --shadow: 0 0 0.25rem rgba(0, 0, 0.5);
