--- a/client/src/pages/ChatroomPage/index.css
+++ b/client/src/pages/ChatroomPage/index.css
@@ -110,7 +110,6 @@ li {
 
 .Chatroom .message p {
     max-width: 50%;
-    margin-bottom: 0.75rem;
     line-height: 1.5rem;
     padding: 0.5rem 1rem;
     border-radius: 1.5rem;
@@ -123,6 +122,7 @@ li {
 .Chatroom .message {
     display: flex;
     align-items: center;
+    margin: 0.5rem;
 }
 
 .Chatroom .sent {
@@ -138,7 +138,8 @@ li {
 .Chatroom .received p {
     background: var(--almost-white);
     color: var(--black);
-
+    box-shadow: var(--shadow);
+    margin-left: 0.25rem;
 }
 
 .Chatroom .SBImg {
@@ -146,4 +147,11 @@ li {
     height: 3rem;
     border-radius: 50%;
     margin: 2px 5px;
+}
+
+.PImg {
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    margin: 0rem 0.25rem;
 }
